# TUI_MusicPlayer

./: .gitignore  CMakeLists.txt  README.md  notes.txt
.cache/clangd/index/: cavacore.h.21AD990C3779387D.idx  main.cpp.623F3282CFE22326.idx  miniaudio.c.3C238CB84D0C7521.idx  miniaudio.h.693C5CF4D1AF5A8E.idx
src/: .main2.cpp.kate-swp  main.cpp  main2.cpp
